--- a/student.html
+++ b/student.html
@@ -49,7 +49,7 @@
                 <input type="date" class="form-control" name="enrollmentdate" id="enrollment-date"
                     placeholder="Enter your Enrollment date" required>
             </div>
-            <input type="button" class="btn btn-info" id="savebutton" value="Save" onclick=save()>
+            <input type="button" class="btn btn-info" id="savebutton" value="Save" onclick=Savedata()>
             <input type="button" class="btn btn-primary" id="update" value="Update" onclick=Updatedata()>
             <input type="button" class="btn btn-danger" id="reset" value="Reset" onclick=resetForm()>
 
